--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-# Front-end Style Guide
+/* # Front-end Style Guide
 
 ## Layout
 
@@ -29,4 +29,4 @@ The designs were created to the following widths:
 ### Headings
 
 - Family: [League Spartan](https://fonts.google.com/specimen/League+Spartan)
-- Weights: 500, 700
+- Weights: 500, 700 */
