--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ The designs were created to the following widths:
 - Family: [League Spartan](https://fonts.google.com/specimen/League+Spartan)
 - Weights: 500, 700 */
 * {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
     box-sizing: border-box;
 }
 
