--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid black;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    border-radius: 10px;
 }
 
 .tags button {
