--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,10 @@ header {
     margin-bottom: 5rem;
 }
 
+main {
+    min-height: 100vh;
+    overflow: auto;
+}
 .tags {
     height: 80px;
     width: 65%;
@@ -80,4 +84,8 @@ header {
     background-color: transparent;
     font-weight: 700;
     font-size: 1rem;
+}
+
+.borderLeft {
+    border-left: 3px solid var(--desatCyan);
 }
