--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,7 @@ header {
 
 main {
     min-height: 100vh;
-    overflow: auto;
-    padding: 2.5rem;
+    padding: 10px;
 }
 
 .tags {
@@ -101,8 +100,19 @@ main {
 }
 
 .job {
-    width: 80%;
+    width: 50%;
+    min-width: 355px;
     height: 125px;
-    margin: 20px auto;
+    margin: 20px 0px;
     border: 1px solid black;
+}
+
+
+@media only screen and (min-width: 768px) {
+    main {
+        padding: 2.5rem;
+    }
+    .job {
+        width: 80%;
+    }
 }
