--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,8 @@ The designs were created to the following widths:
     --veryDarkCyan: hsl(180, 14%, 20%);
 }
 
+body { background-color: var(--bgGrayishCyan);}
+
  img {
     width: 100%;
 }
@@ -104,7 +106,8 @@ main {
     min-width: 355px;
     height: 125px;
     margin: 20px 0px;
-    border: 1px solid black;
+    background-color: white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 
