fixed length of jobs, add hr element for mobile pov

--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ main {
 }
 
 .borderLeft {
-    border-left: 3px solid var(--desatCyan);
+    border-left: 6px solid var(--desatCyan);
 }
 
 .listings {
@@ -104,10 +104,11 @@ main {
 .job {
     width: 50%;
     min-width: 355px;
-    height: 125px;
+    height: 160px;
     margin: 20px 0px;
     background-color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    border-radius: 5px;
 }
 
 
@@ -117,5 +118,6 @@ main {
     }
     .job {
         width: 80%;
+        height: 125px;
     }
 }
