--- a/styles.css
+++ b/styles.css
@@ -104,13 +104,16 @@ main {
 .job {
     width: 50%;
     min-width: 355px;
-    height: 160px;
+    height: 175px;
     margin: 20px 0px;
     padding: 1rem;
     background-color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 5px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .job img {
