padding adjustments, h4 to job title

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ main {
     min-width: 355px;
     height: 175px;
     margin: 20px 0px;
-    padding: 1rem;
+    padding: 1rem 1.2rem;
     background-color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 5px;
@@ -120,6 +120,10 @@ main {
     width: 45px;
     position: absolute;
     top: -25px;
+}
+
+h4 {
+    display: inline;
 }
 
 @media only screen and (min-width: 768px) {
