--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ main {
     border-radius: 10px;
 }
 
-.tags button {
+.clearButton {
     margin-left: auto;
     margin-right: 1rem;
     border: none;
@@ -90,7 +90,7 @@ main {
 }
 
 .borderLeft {
-    border-left: 6px solid var(--desatCyan);
+    border-left: 5px solid var(--desatCyan);
 }
 
 .listings {
@@ -122,6 +122,9 @@ main {
     top: -25px;
 }
 
+.leftContent-job {
+    width: 100%;
+}
 h4 {
     display: inline;
     color: var(--desatCyan);
@@ -148,11 +151,18 @@ h4 {
 .title-details {
     margin: 10px 0px;
     color: var(--darkGrayishCyan); 
+    display: flex;
+    flex-wrap: wrap;
+
 }
-
 .title-details span:not(:first-child) { margin-left: 10px; }
-
 .dot::before { content:"• "; }
+.job-tags {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
 
 @media only screen and (min-width: 768px) {
@@ -176,6 +186,12 @@ h4 {
         display: flex;
         flex-direction: column;
         margin-right: auto;
+    }
+
+    .job-tags {
+        flex-wrap: nowrap;
+        flex-direction: row;
+        /* add space between buttons */
     }
     hr { display: none; }
 }
