--- a/styles.css
+++ b/styles.css
@@ -156,11 +156,10 @@ h4 {
 
 }
 
-/* .title-details span:not(:first-child) { margin-left: 5px; } */
 .dot::before { content:"• "; margin: 0px 5px;  }
 .job-tags {
     display: flex; 
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -187,19 +186,19 @@ h4 {
         display: flex;
         flex-direction: column;
         margin-right: auto;
+        width: 250px;
     }
 
     .job-tags {
-        flex-wrap: nowrap;
+        width: 40%;
+        /* flex-wrap: nowrap; */
         flex-direction: row;
         /* add space between buttons */
     }
     hr { display: none; }
 }
 
-/* @media only screen and (min-width: 768px) and (max-width: 950px) {
-    .job img {
-        margin: 0px 5px;
-    }
-
-} */
+@media only screen and (min-width: 768px) and (max-width: 950px) {
+    .job img { margin: 0px 5px; }
+    .leftContent-job { margin: 0px 10px; }
+}
