--- a/styles.css
+++ b/styles.css
@@ -108,11 +108,11 @@ main {
 .job {
     width: 50%;
     min-width: 355px;
-    height: 175px;
+    height: 200px;
     margin: 20px 0px;
     padding: 1rem 1.2rem;
     background-color: white;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: hsl(180, 29%, 50%) 0px 10px 27px -12px, rgba(0, 0, 0, 0.1) 0px 8px 16px -8px;
     border-radius: 5px;
     position: relative;
     display: flex;
