--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,29 @@ main {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 10px;
 }
+.tag {
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    font-weight: 700;
+    background-color: var(--filterGrayishCyan);
+    color: var(--desatCyan);
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.tag img {
+    width: 15px;
+}
+.tag button {
+    height: 100%;
+    width: 100%;
+    /* padding: 5px; */
+    border-radius: 5px;
+    border: none;
+    background-color: var(--desatCyan);
+}
 
 .clearButton {
     margin-left: auto;
@@ -87,6 +110,7 @@ main {
     background-color: transparent;
     font-weight: 700;
     font-size: 1rem;
+    display: inline;
 }
 .clearButton:hover {
     cursor: pointer;
@@ -106,9 +130,8 @@ main {
 }
 
 .job {
-    width: 50%;
-    min-width: 355px;
-    height: 200px;
+    width: 300px;
+    height: 250px;
     margin: 20px 0px;
     padding: 1rem 1.2rem;
     background-color: white;
@@ -137,7 +160,7 @@ h4 {
 
 .new {
     padding: 5px 10px;
-    margin: 0 5px;
+    margin-left: 20px;
     background-color: var(--desatCyan);
     border-radius: 20px;
     color: white;
@@ -145,6 +168,7 @@ h4 {
 }
 
 .featured {
+    margin-left: 5px;
     padding: 5px 10px;
     background-color: black;
     border-radius: 20px;
@@ -157,14 +181,16 @@ h4 {
     color: var(--darkGrayishCyan); 
     display: flex;
     flex-wrap: wrap;
-
+}
+.title p:hover {
+    color: var(--desatCyan);
+    cursor: pointer;
 }
 
 .dot::before { content:"• "; margin: 0px 5px;  }
 .job-tags {
     display: flex; 
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
 }
 
@@ -216,10 +242,14 @@ h4 {
     .job-tags {
         width: 40%;
         flex-direction: row;
+        justify-content: space-evenly;
     }
     h4 { font-size: 18px; }
     .title p { font-size: 20px; }
-    .title-details { font-size: 16px; }
+    .title-details { 
+        font-size: 16px; 
+        justify-content: space-between;
+    }
     hr { display: none; }
 }
 
