--- a/styles.css
+++ b/styles.css
@@ -75,12 +75,13 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 10px;
 }
 .tag {
-    padding: 5px;
     border-radius: 5px;
+    margin: 10px;
     border: none;
     font-weight: 700;
     background-color: var(--filterGrayishCyan);
@@ -90,18 +91,18 @@ main {
     justify-content: center;
     align-items: center;
 }
-.tag img {
-    width: 15px;
-}
+.tag span { padding: 5px 10px 5px; }
 .tag button {
     height: 100%;
     width: 100%;
-    /* padding: 5px; */
+    padding: 5px;
     border-radius: 5px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
     border: none;
     background-color: var(--desatCyan);
 }
-
+.tag button:hover { background-color: var(--veryDarkCyan); cursor: pointer; }
 .clearButton {
     margin-left: auto;
     margin-right: 1rem;
