utilized ul tag, now appending to list correctly

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,13 @@ main {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 10px;
 }
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
 .chosen-tag {
     border-radius: 5px;
     margin: 10px;
