--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,10 @@ header {
     margin-bottom: 5rem;
 }
 
+.bg-shape {  
+    background-color: var(--desatCyan);
+    
+}
 main {
     min-height: 100vh;
     padding: 10px;
